# racecar

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
assets/: material_ball.glb  smooth_suzanne.glb  smoother_suzanne.glb  sphere.glb  suzanne.glb  triangle.glb
assets/sponza/: Sponza.gltf
presets/: bugatti_1_chiron.json  example.json  mclaren_1_orange.json  mclaren_2_red_orange.json  mclaren_3_white.json  mclaren_4_victory_grey.json  porsche_1_gray.json  porsche_2_green.json  porsche_3_yellow.json  porsche_4_blue.json  shot02_start.json  shot03_swoop.json  shot05.json  shot06.json  shot07.json  shot08_transition_to_og copy.json  shot09_swoop_to_low copy.json  shot10_dynamic_skies1.json  shot11_dynamic_skies2.json  shot12_dynamic_skies3.json  shot13_cam_up copy.json  shot14_wet_down.json  shot15_wet_up.json  shot16_snow_up.json  shot17_crazy.json  shot18_close_up.json  shot19_sun_move_glint.json  shot20_mid.json  shot21_back.json  shot23_bye.json
presets/other/: example.json  porsche_2_green.json  porsche_3_yellow.json
shaders/: common.slang  compile_all.ps1  compile_triangle.ps1  imgui.ini  sh_utils.slang  triangle.slang  triangle.spv  utils.slang
shaders/atmosphere/: atmosphere.slang  atmosphere.spv  bake_atmosphere.slang  bake_atmosphere.spv  bake_atmosphere_irradiance.spv  bake_atmosphere_mips.spv  bindings.slang  common.slang  compile_atmosphere.ps1  constants.slang  helpers.slang  main.slang  parameters.slang  utils.slang
shaders/atmosphere/geo/: atms_geo.slang  compile_atms_geo.ps1
shaders/atmosphere/sky/: atmosphere.slang  atmosphere.spv  bake_atmosphere.slang  bake_atmosphere.spv  bake_atmosphere_irradiance.spv  bake_atmosphere_mips.spv  common.slang  compile_atms_sky.ps1  main.slang
shaders/buffer_triangle/: buffer_triangle.slang  buffer_triangle.spv  compile_triangle.ps1
shaders/car_mat/: car_lighting.slang  car_mat.slang  car_mat.spv  compile_car_mat.ps1
shaders/cloud_debug/: cloud_debug.slang  cloud_debug.spv  cloud_noise.slang  compile_cloud_debug.ps1  cs_generate_cumulus.spv  cs_generate_high_frequency.spv  cs_generate_low_frequency.spv
shaders/clouds/: cheap_raymarch.slang  cloud_bindings.slang  cloud_composite.slang  cloud_composite.spv  cloud_raymarch.slang  cloud_utils.slang  clouds.slang  clouds.spv  compile_cloud_debug.ps1  compile_clouds.ps1  cs_generate_high_frequency.spv
shaders/deferred/: compile_deferred.ps1  depth_prepass.slang  depth_prepass.spv  lighting.slang  lighting.spv  pp_test.slang  pp_test.spv  prepass.slang  prepass.spv  terrain_prepass.slang  terrain_prepass.spv
shaders/glint/: compile_glint_init.ps1  glint.hlsl  glint_noise_init.hlsl  glint_noise_init.slang  glint_noise_init.spv
shaders/pbr/: compile_pbr.ps1  pbr.slang  pbr.spv
shaders/post/aa/: aa.slang  aa.spv  compile_aa.ps1  history_aa.spv
shaders/post/ao/: ao.slang  ao.spv  compile_ao.ps1
shaders/post/bloom/: bloom_data.slang  brightness_threshold.slang  brightness_threshold.spv  common.slang  compile_bloom.ps1  downsample.slang  downsample.spv  gather.slang  gather.spv  gaussian.slang  horz_blur.slang  horz_blur.spv  threshold.slang  threshold.spv  upsample.slang  upsample.spv  vert_blur.slang  vert_blur.spv
shaders/post/tonemapping/: compile_tonemapping.ps1  tonemapping.slang  tonemapping.spv
shaders/pp/: brightness_threshold.slang  brightness_threshold.spv  compile_pp.ps1
shaders/prefilter/: compile_irradiance.ps1  irradiance.slang  irradiance.spv  irradiance_sh.spv
shaders/raymarch/: compile_raymarch.ps1  raymarch.slang  raymarch.spv
shaders/raytracing/: compile_raytracing.ps1  shadow.slang  shadow.spv
shaders/reflections/: compile_reflections.ps1  reflections.slang  reflections.spv
shaders/terrain/: compile_terrain_lighting.ps1  cs_terrain_draw.spv  terrain_lighting.slang  terrain_prepass.slang  terrain_prepass.spv
shaders/world_pos_debug/: compile_world_pos.ps1  world_pos_debug.slang  world_pos_debug.spv
slang/cmake/: slangConfigVersion.cmake
slang/include/: slang-tag-version.h
slang/lib/: gfx.lib  slang-compiler.lib  slang-rt.lib  slang.lib
slang/share/doc/slang/user-guide/: a2-01-spirv-target-specific.md
src/: atmosphere.cpp  atmosphere.hpp  atmosphere_baker.cpp  atmosphere_baker.hpp  compute.hpp  constants.hpp  context.hpp  deferred.cpp  deferred.hpp  draw.cpp  draw.hpp  engine.cpp  engine.hpp  exception.hpp  gui.cpp  gui.hpp  gui_material.hpp  log.hpp  main.cpp  orbit_camera.cpp  orbit_camera.hpp  preset.cpp  preset.hpp  racecar.cpp  renderer.cpp  renderer.hpp  sdl.cpp  sdl.hpp  vk.cpp  vk.hpp  volumetrics.cpp  volumetrics.hpp
src/engine/: blit_task.cpp  blit_task.hpp  compute.cpp  compute.hpp  compute_task.cpp  compute_task.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptors.cpp  descriptors.hpp  destructor_stack.cpp  destructor_stack.hpp  draw_task.cpp  draw_task.hpp  execute.cpp  execute.hpp  frame_data.hpp  gfx.cpp  gfx.hpp  gfx_task.cpp  gfx_task.hpp  gui.cpp  gui.hpp  image.cpp  image.hpp  images.cpp  images.hpp  imm_submit.cpp  imm_submit.hpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  pipeline_barrier.cpp  pipeline_barrier.hpp  prepass.cpp  prepass.hpp  rwimage.cpp  rwimage.hpp  rwtexture.hpp  (+7 more)
src/engine/post/: anti_aliasing.cpp  anti_aliasing.hpp  ao.cpp  ao.hpp  bloom.cpp  bloom.hpp  tonemapping.cpp  tonemapping.hpp
src/geometry/: gpu_mesh_buffers.cpp  gpu_mesh_buffers.hpp  ibl.cpp  ibl.hpp  mesh.cpp  mesh.hpp  procedural.cpp  procedural.hpp  quad.cpp  quad.hpp  scene_mesh.cpp  scene_mesh.hpp  triangle.hpp
src/imgui/: imconfig.h
src/racecar/: racecar.cpp  racecar.hpp
src/scene/: camera.cpp  camera.hpp  scene.cpp  scene.hpp
src/terrain/: cbt.cpp  cbt.hpp  terrain.cpp  terrain.h  terrain.hpp
src/vk/: common.cpp  common.hpp  create.cpp  create.hpp  init.cpp  init.hpp  mem.cpp  mem.hpp  ray_tracing.cpp  ray_tracing.hpp  utility.cpp  utility.hpp  vma.cpp  vma.hpp
